
The format is inspired from [Keep a Changelog](https://keepachangelog.com/en/1.0.0/).
This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [v0.3.0.dev0]
### Added:
 - [fpavogt, 2022-01-27] Add tests for the .plots.secondary module.
### Fixed:
 - [fpavogt, 2022-01-27] Fix #66 and #67.
 - [fpavogt, 2022-01-26] Fix #62, #63 and #64.
### Changed:
### Deprecated:
### Removed:
### Security:

## [v0.2.1.dev0]
### Fixed:
 - [fpavogt, 2022-01-21] Fix #58.

## [v0.2.0.dev1]
### Fixed:
 - [fpavogt, 2022-01-21] First pypi release.

## [v0.2.0.dev0]
### Added:
 - [fpavogt, 2022-01-21] New CI Actions to automate the pypi releases.
 - [fpavogt, 2022-01-17] Added new utils.utils.temp_seed() function to set random seed temporarily only.
 - [fpavogt, 2022-01-13] New icao module, for easy/clean access to the significant_cloud() function.
 - [fpavogt, 2022-01-13] Doc cleanup/improvement, and use of :py:func: (etc...) function to ease user navigation.
### Fixed:
 - [fpavogt, 2022-01-17] Fix #49 - mock cloud layers now have proper type values.
 - [fpavogt, 2022-01-10] Fix issues #40 and #41.
### Changed:
 - [fpavogt, 2022-01-14] Fix #47.
 - [fpavogt, 2022-01-10] Update copyright years.
### Deprecated:
### Removed:
 - [fpavogt, 2022-01-14] ampycloud.core.synop(), and all synop references.
### Security:

## [v0.1.0]
### Added:
 - [fpavogt, 2021-12-21] Add tests to check real data for scientific stability (fixes #33).
 - [fpavogt, 2021-12-17] Add CODE_OF_CONDUCT.md and auto-doc-publish action, incl. first doc release.
 - [fpavogt, 2021-12-16] Add a new entry point for `copy_prm_file`, i.e. fix #26.
 - [fpavogt, 2021-12-15] Add `msa` to `plots.diagnostic`, i.e. fix #22.
 - [fpavogt, 2021-12-10] Add Minimum Sector Altitude to the metar_msg() method.
 - [fpavogt, 2021-12-10] Add detailed examples to the core functions, and link them in the doc.
 - [fpavogt, 2021-12-10] Add the performance module, and a dedicated high level entry point.